# nx-title-fetcher

./: CMakeLists.txt  README.md  build_libromfs_generator.sh  resource.rc.in
.github/workflows/: ci.yaml
android-project/app/jni/: CMakeLists.txt  borealis  libromfs-generator
demo/src/: main.cpp
demo/src/tab/: settings_tab.cpp
resources/i18n/en-US/: app.json  hints.json
resources/xml/activity/: main.xml
resources/xml/tabs/: install.xml
src/: main.cpp
src/activity/: main_activity.hpp
src/tabs/: install_tab.cpp  install_tab.hpp
